# Edge-Friend-Loader

./: .gitignore  CMakeLists.txt  README.md
hlsl/: edgefriend.hlsl
include/: DXSampleHelper.h  dx.h  edgefriend.h  obj_io.h  rapidobj.hpp
src/: Main.cpp  dx.cpp  edgefriend.cpp  obj_io.cpp
